--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://zhoumo199163.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: The Weekend Blog
+subtitle: I hope it will continue to be updated
+author: Weekend
 simple_search: https://www.google.com/search
 description:
 
